--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -7,16 +7,26 @@
 </head>
 
 <body>
-    <h1>My Tweets</h1>
-    <p>Here is an embedded tweet:</p>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">This is an example tweet.</p>&mdash; ALX (@ALX)
-        <a href="https://twitter.com/ALX/status/1234567890?ref_src=twsrc%5Etfw">March 1, 2024</a>
-    </blockquote>
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <main>
+        <article>
+            <!-- المحتوى الخاص بكل صفحة هنا -->
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
-    <p><a href="index.html">Back to Home</a></p>
+    <footer>
+        <p>Made by Your Name - <a href="https://example.com" target="_blank">here</a></p>
+    </footer>
 </body>
+
 
 </html>
