--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,18 +7,26 @@
 </head>
 
 <body>
-    <h1>Welcome to My First Webpage</h1>
-    <h2>Subheading Level 2</h2>
-    <h3>Subheading Level 3</h3>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <p>This is paragraph 1.</p>
-    <p>This is paragraph 2.</p>
-    <p>This is paragraph 3.</p>
-    <p>This is paragraph 4.</p>
+    <main>
+        <article>
+            <!-- المحتوى الخاص بكل صفحة هنا -->
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
-    <a href="https://www.alx.org" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
-    </a>
+    <footer>
+        <p>Made by Your Name - <a href="https://example.com" target="_blank">here</a></p>
+    </footer>
 </body>
+
 
 </html>
